--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/antlr-2.7.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="D:/Users/Bao/workspace/swt-3.7.2-win32-win32-x86/swt.jar"/>
+	<classpathentry kind="lib" path="G:/HSU/Eclipse/eclipse/swt-3.7.2-win32-win32-x86/swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
